<resources>
    <string name="app_name">Invite me</string>
    <string name="continue_button">Continue as Guest</string>
    <string name="logo">InviteMe</string>
    <string name="main_feed">Main Feed</string>
    <string name="create_event">Create Event</string>
    <string name="events_feed">Events Feed</string>
    <string name="my_events">My Events</string>
    <string name="title">Title</string>
    <string name="description">Describe your event.</string>
    <string name="location">Location</string>
    <string name="date">Date and Time</string>
    <string name="numSpots"><u># of Spots</u></string>
    <string name="numSpotsValue"> 2&#8211;50</string>
    <string name="button_createShindig">Create</string>
    <string name="title_activity_your_shindigs">yourShindigsActivity</string>
    <string name="txt_title">Title</string>
    <string name="txt_desc">Description</string>
    <string name="txt_host">Host</string>
    <string name="txt_time">Time</string>
    <string name="host_preface">Hosted by:</string>
    <string name="event_RSVP">RSVP</string>
    <string name="total_Spots">Spots:</string>
    <string name="txt_Spots">Spots</string>
    <string name="facebook_app_id">2316140911945217</string>
    <string name="select_category">Select Category</string>
    <string name="Athletics">Athletics</string>
    <string name="Leisure">Movies, Board Games, etc.</string>
    <string name="Party">Party (Dancing, Music, etc.)</string>
    <string name="Outdoors">Outdoors (Fishing, Camping, etc.)</string>
    <string name="Bbq">Cookouts or BBQs</string>

    <string-array name="categories_array">
        <item>@string/Athletics</item>
        <item>@string/Leisure</item>
        <item>@string/Party</item>
        <item>@string/Outdoors</item>
        <item>@string/Bbq</item>
    </string-array>

</resources>
