<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="260dp"
        android:layout_height="130dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textLongMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textShortMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="datetime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/button_createShindig"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13"
        tools:text="@string/numSpots"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/editText16"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/numSpotsValue"
        android:inputType="number"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>