<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_weight="0.05">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="11dp"
            android:text="@string/txt_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtTitle"
            android:layout_centerVertical="true"
            android:text="@string/txt_desc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/txtDesc"
            android:text="@string/txt_time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtTitle"
            android:layout_alignBottom="@+id/txtTitle"
            android:layout_marginStart="46dp"
            android:layout_toEndOf="@+id/txtTitle"
            android:text="@string/txt_host"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>