<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b3cccc"
    tools:context="com.me.invite.inviteme.CreateShindigActivity">

    <EditText
        android:id="@+id/eventTitle"
        android:background="#c2f0f0"
        android:paddingLeft="5dp"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapSentences"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/eventDesc"
        android:layout_width="260dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#c2f0f0"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:paddingLeft="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitle"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/eventLocation"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:background="#c2f0f0"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textCapSentences"
        android:paddingLeft="5dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <EditText
        android:id="@+id/eventDate"
        android:background="#c2f0f0"
        android:paddingLeft="5dp"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="datetime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocation"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="88dp"
        android:layout_height="53dp"
        android:onClick="createNewShindig"
        android:text="@string/button_createShindig"
        tools:ignore="RtlHardcoded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/num_Spots"
        android:layout_width="70dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/numSpots"
        android:textColor="#000000"
        android:textStyle=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDate"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/eventSpots"
        android:background="#c2f0f0"
        android:paddingLeft="5dp"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginLeft="7dp"
        android:ems="10"
        android:hint="@string/numSpotsValue"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/num_Spots"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/eventDate"
        android:layout_marginStart="7dp" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="260dp"
        android:layout_height="27dp"
        android:entries="@array/categories_array"
        android:spinnerMode="dialog"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/eventDesc" />

</android.support.constraint.ConstraintLayout>
