<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.invite.inviteme.MyShindigs"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:text="@string/my_events"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/button4"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.615" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="104dp"
        android:layout_height="48dp"
        android:onClick="createAnEvent"
        android:text="@string/create_event"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="goToMainFeed"
        android:text="@string/events_feed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listView2"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="0dp"
        android:layout_height="439dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>
